Fix: buttons not visible due to too long url

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  width: fit-content;
-  min-width: 400px;
+  width: 500px;
 }
 
 code {
